force-app/main/default/objects/Offer__c/fields/Annual_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Interest_Rate__c</fullName>
    <label>Annual Interest Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>