force-app/main/default/objects/Offer__c/fields/Card_benefits_offered__c.field-meta.xml
<CustomField>
    <fullName>Card_benefits_offered__c</fullName>
    <label>Card benefits offered</label>
    <length>100</length>
    <type>Text</type>
</CustomField>