force-app/main/default/objects/Offer__c/fields/Cash_Limit__c.field-meta.xml
<CustomField>
    <fullName>Cash_Limit__c</fullName>
    <label>Cash Limit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>