force-app/main/default/objects/Offer__c/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustomerID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>