force-app/main/default/objects/Offer__c/fields/Eligibility_Type__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Type__c</fullName>
    <label>Eligibility Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>