force-app/main/default/objects/Offer__c/fields/Existing_credit_limit__c.field-meta.xml
<CustomField>
    <fullName>Existing_credit_limit__c</fullName>
    <label>Existing credit limit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>