force-app/main/default/objects/Offer__c/fields/External_Offer_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Offer_ID__c</fullName>
    <label>External Offer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>