force-app/main/default/objects/Offer__c/fields/Fee_Code__c.field-meta.xml
<CustomField>
    <fullName>Fee_Code__c</fullName>
    <label>Fee Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>