force-app/main/default/objects/Offer__c/fields/Max_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Offer_Amount__c</fullName>
    <label>Max Offer Amount</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>