force-app/main/default/objects/Offer__c/fields/Max_ROI__c.field-meta.xml
<CustomField>
    <fullName>Max_ROI__c</fullName>
    <label>Max ROI</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>