force-app/main/default/objects/Offer__c/fields/Min_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Offer_Amount__c</fullName>
    <label>Min Offer Amount</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>