force-app/main/default/objects/Offer__c/fields/Min_ROI__c.field-meta.xml
<CustomField>
    <fullName>Min_ROI__c</fullName>
    <label>Min ROI</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>