force-app/main/default/objects/Offer__c/fields/Monthly_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Interest_Rate__c</fullName>
    <label>Monthly Interest Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>