force-app/main/default/objects/Offer__c/fields/Monthly_Reducing_ROI__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Reducing_ROI__c</fullName>
    <label>Monthly Reducing ROI</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>