force-app/main/default/objects/Offer__c/fields/Offer_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Offer_Eligibility__c</fullName>
    <label>Offer Eligibility</label>
    <length>10</length>
    <type>Text</type>
</CustomField>