force-app/main/default/objects/Offer__c/fields/Offer_Name__c.field-meta.xml
<CustomField>
    <fullName>Offer_Name__c</fullName>
    <label>Offer Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>