force-app/main/default/objects/Offer__c/fields/Offer_Owner__c.field-meta.xml
<CustomField>
    <fullName>Offer_Owner__c</fullName>
    <label>Offer Owner</label>
    <length>20</length>
    <type>Text</type>
</CustomField>