force-app/main/default/objects/Offer__c/fields/Offer_Source__c.field-meta.xml
<CustomField>
    <fullName>Offer_Source__c</fullName>
    <label>Offer Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Centre</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>