force-app/main/default/objects/Offer__c/fields/Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status__c</fullName>
    <label>Offer Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Offer Converted</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>