force-app/main/default/objects/Offer__c/fields/Offer_Status_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status_Update_Date__c</fullName>
    <label>Offer Status Update Date</label>
    <type>Date</type>
</CustomField>