force-app/main/default/objects/Offer__c/fields/Offered_Card_Best_Fit__c.field-meta.xml
<CustomField>
    <fullName>Offered_Card_Best_Fit__c</fullName>
    <label>Offered Card(Best Fit)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>