force-app/main/default/objects/Offer__c/fields/Offered_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Offered_Credit_Limit__c</fullName>
    <label>Offered Credit Limit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>