force-app/main/default/objects/Offer__c/fields/Office_Landmark__c.field-meta.xml
<CustomField>
    <fullName>Office_Landmark__c</fullName>
    <label>Office Landmark</label>
    <length>100</length>
    <type>Text</type>
</CustomField>