force-app/main/default/objects/Offer__c/fields/Office_PIN_Code__c.field-meta.xml
<CustomField>
    <fullName>Office_PIN_Code__c</fullName>
    <label>Office PIN Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>