force-app/main/default/objects/Offer__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>SEPL</fullName>
            </value>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>LAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>