force-app/main/default/objects/Offer__c/fields/Product_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Type__c</fullName>
    <label>Product Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Home Loan Top Up</fullName>
            </value>
            <value>
                <fullName>Cross sell HL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>