force-app/main/default/objects/Offer__c/fields/Secured_Card_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Secured_Card_Identifier__c</fullName>
    <label>Secured Card Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>