force-app/main/default/objects/Offer__c/fields/Secured_Card_Segment__c.field-meta.xml
<CustomField>
    <fullName>Secured_Card_Segment__c</fullName>
    <label>Secured Card Segment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>