force-app/main/default/objects/Offer__c/fields/Secured_Offer_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Secured_Offer_Multiplier__c</fullName>
    <label>Secured Offer Multiplier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>