force-app/main/default/objects/Offer__c/fields/Tenure_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Tenure_in_Months__c</fullName>
    <label>Tenure in Months</label>
    <length>20</length>
    <type>Text</type>
</CustomField>