force-app/main/default/objects/Offer__c/fields/Test_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Campaign_Name__c</fullName>
    <label>Test Campaign Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>