force-app/main/default/objects/Offer__c/fields/Top_Up_Rate_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Top_Up_Rate_of_Interest__c</fullName>
    <label>Top Up Rate of Interest</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>