force-app/main/default/objects/Offer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Offer_Name__c</columns>
    <columns>Campaign__c</columns>
    <columns>External_Offer_ID__c</columns>
    <columns>Offer_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>