force-app/main/default/objects/Offer__c/listViews/My_All_Offer.listView-meta.xml
<ListView>
    <fullName>My_All_Offer</fullName>
    <columns>NAME</columns>
    <columns>Offer_Name__c</columns>
    <columns>Campaign__c</columns>
    <columns>External_Offer_ID__c</columns>
    <columns>Offer_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My All Offer</label>
</ListView>